--- a/tothemoon_v2/src/assets/Footer.css
+++ b/tothemoon_v2/src/assets/Footer.css
@@ -4,15 +4,17 @@
     height: 500px;
     min-width: 1200px;
     vertical-align: baseline;
+    margin: auto;
+    font-weight: 400;
 }
 
 .footer{
     min-width: 1200px;
-    margin : 0 100px 0 100px;
+    margin : 0 300px 0 300px;
     padding : 55px 0 30px 0;
     display: flex;
     justify-content: space-between;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
 }
 
@@ -24,6 +26,20 @@
     list-style: none;
 }
 
+.fc_list li{
+    margin-top: 15px;
+}
+.link{
+    display: flex;
+}
+
 .link i{
     margin-right: 20px;
+    background: content-box;
+}
+
+.footer-content{
+    width: 300px;
+    margin: 15px;
+    padding: 30px;
 }
