--- a/tothemoon_v2/src/assets/Nav.css
+++ b/tothemoon_v2/src/assets/Nav.css
@@ -1,20 +1,89 @@
-.nav-warpper{
-    height: 80px;
-    width: 100%;
-    position: fixed;
-    z-index : 5;
-    }
-
-.nav-hidden-menu{
-    position: fixed;
-    top:0;
-    width: 100%;
-    border-radius: 0;
-    background-color: #fff;
-    z-index: 10;
-    box-shadow: 0 0 4px rgba(0,0,0,0.4);
+.bg-black {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.bg-white {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-radius: 0;
+  background-color: #fff;
+  z-index: 10;
+  box-shadow: 0 0 4px rgb(0, 0, 0);
 }
 
-.bg-black{
-    position : absoulte;
+.nav-warpper {
+  width: 100%;
+  position: fixed;
+  z-index: 5;
+}
+
+.nav-hidden-menu {
+  margin: 0px 300px 0px 300px;
+  padding: 64px 0 38px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-hidden-menu ul {
+  list-style: none;
+  margin-top: 15px;
+}
+
+.nav-hidden-menu ul li {
+  margin-top: 5px;
+}
+
+.nav-menu {
+  margin: 5px 5px 5px;
+  padding: 30px;
+  min-width: 200px;
+}
+
+.nav {
+  font-size: 15px;
+}
+
+.menu-close-btn {
+  width: 21 px;
+  height: 21 px;
+  vertical-align: middle;
+  background-position: -149 px -39 px;
+  background-color: #fff;
+  border: none;
+  font-size: 30px;
+  margin-bottom: 300px;
+}
+
+.sub-menu button,i{
+    border: none;
+    background-color: #fff;
+    width: 100px;
+    font-size : 18px;
+    font-weight: 600;
+}
+
+.sub-menu button{
+    margin-right: 30px;
+}
+.sub-menu i{
+  vertical-align: middle;
+  cursor: pointer;
+  place-self: center;
+  
+}
+
+.sub-menu{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    z-index: 6;
+    background: #fff;
+    height: 80px;
+    padding:0 300px 0 300px;
 }
