--- a/tothemoon_v2/src/assets/Nav.css
+++ b/tothemoon_v2/src/assets/Nav.css
@@ -49,15 +49,15 @@
   font-size: 15px;
 }
 
-.menu-close-btn {
-  width: 21 px;
-  height: 21 px;
-  vertical-align: middle;
-  background-position: -149 px -39 px;
+.menu-close-btn{
   background-color: #fff;
   border: none;
-  font-size: 30px;
   margin-bottom: 300px;
+}
+
+.menu-close-btn i{
+  font-size: 30px;
+  cursor: pointer;
 }
 
 .sub-menu button,i{
@@ -70,6 +70,7 @@
 
 .sub-menu button{
     margin-right: 30px;
+    cursor: pointer;
 }
 .sub-menu i{
   vertical-align: middle;
@@ -85,5 +86,37 @@
     z-index: 6;
     background: #fff;
     height: 80px;
-    padding:0 300px 0 300px;
+}
+
+.sub-menu button:hover{
+  border-bottom: 3px solid rgb(159, 13, 196);
+}
+
+.fade-enter-from{
+  opacity: 0;
+}
+.fade-enter-active{
+  transition: all 1s;
+}
+.fade-enter-to{
+  opacity: 1;
+}
+
+.fade-leave-from{
+  opacity: 1;
+}
+.fade-leave-active{
+  transition: all 1s;
+}
+.fade-leave-to{
+  opacity: 0;
+}
+
+.menu-container{
+  display: flex;
+}
+
+.header{
+  display: flex;
+  padding:0 300px 0 300px;
 }
